content/docs/v0.0.1/reference/google.kubeform.com/ComputeImage.md
---
title: ComputeImage
menu:
  docs_v0.0.1:
    identifier: computeimage-google.kubeform.com
    name: ComputeImage
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## ComputeImage
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `ComputeImage` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ComputeImageSpec](#ComputeImageSpec)***||
| `status` | ***[ComputeImageStatus](#ComputeImageStatus)***||
## ComputeImageSpec
##### (Appears on:[ComputeImage](#ComputeImage), [ComputeImageStatus](#ComputeImageStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `createTimeout` | ***int***| ***(Optional)*** Deprecated|
| `description` | ***string***| ***(Optional)*** |
| `family` | ***string***| ***(Optional)*** |
| `labelFingerprint` | ***string***| ***(Optional)*** |
| `labels` | ***map[string]string***| ***(Optional)*** |
| `licenses` | ***[]string***| ***(Optional)*** |
| `name` | ***string***||
| `project` | ***string***| ***(Optional)*** |
| `rawDisk` | ***[[]ComputeImageSpecRawDisk](#ComputeImageSpecRawDisk)***| ***(Optional)*** |
| `selfLink` | ***string***| ***(Optional)*** |
| `sourceDisk` | ***string***| ***(Optional)*** |
## ComputeImageSpecRawDisk
##### (Appears on:[ComputeImageSpec](#ComputeImageSpec))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `containerType` | ***string***| ***(Optional)*** |
| `sha1` | ***string***| ***(Optional)*** |
| `source` | ***string***||
## ComputeImageStatus
##### (Appears on:[ComputeImage](#ComputeImage))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ComputeImageSpec](#ComputeImageSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
